[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vox2vec"
version = "0.0.0"
dynamic = ["dependencies"]
requires-python = ">=3.10"
authors = [
  { name = "List of contributors: https://github.com/mishgon/vox2vec/graphs/contributors", email = "Mikhail.Goncharov2@skoltech.ru" },
]
description = "vox2vec: A Framework for Self-supervised Contrastive Learning of Voxel-level Representations in Medical Images"
readme = "README.md"
license = {file = "LICENSE"}
keywords=["medical computer vision", "deep learning", "self-supervised learning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/mishgon/vox2vec"
Issues = "https://github.com/mishgon/vox2vec/issues"

[tool.setuptools.packages.find]
include = ["vox2vec"]
namespaces = false

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}